crates/cli/tests/snapshots/activate_test__activate__empty_output_if_no_tools-2.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
proto_activate() {
  local previous_exit_status=$?;
  local output;
  trap '' SIGINT;
  output=$(proto activate bash --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT;
  return $previous_exit_status;
};
proto_deactivate() {
  local previous_exit_status=$?;
  local output;
  trap '' SIGINT;
  output=$(proto deactivate bash --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT;
  return $previous_exit_status;
};
if [[ "$(declare -p PROMPT_COMMAND 2>&1)" == "declare -a"* ]]; then
  if [[ " ${PROMPT_COMMAND[*]:-} " != *" proto_activate "* ]]; then
    PROMPT_COMMAND=(proto_activate "${PROMPT_COMMAND[@]}")
  fi
elif [[ ";${PROMPT_COMMAND:-};" != *";proto_activate;"* ]]; then
  PROMPT_COMMAND="proto_activate${PROMPT_COMMAND:+;$PROMPT_COMMAND}"
fi

proto_activate
