crates/cli/tests/snapshots/activate_test__activate__empty_output_if_no_tools-4.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
fn proto-activate {|@_|
  eval (proto activate elvish --export | slurp)
}

fn proto-deactivate {
  eval (proto deactivate elvish --export | slurp)
  set after-chdir = [(each {|hook| if (not (and (has-key $hook def) (eq $hook[def] $proto-activate~[def]))) { put $hook } } $after-chdir)]
}

set after-chdir = [(each {|hook| if (not (and (has-key $hook def) (eq $hook[def] $proto-activate~[def]))) { put $hook } } $after-chdir)]
set @after-chdir = $@after-chdir $proto-activate~

proto-activate
