crates/cli/tests/snapshots/activate_test__activate__empty_output_if_no_tools-6.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
Error: shell::no_hook_support

  × Your shell, ion, does not support "on context change" hooks. Please remove
  │ the command from your shell that is triggering this hook.
