crates/cli/tests/snapshots/activate_test__activate__empty_output_if_no_tools-8.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
export def _proto_activate_hook [] {
    let data = proto activate nu --reporter json | from json

    $data | get --optional env | items { |k, v|
        if $v == null {
            if $k in $env {
                hide-env $k
            }
        } else {
            load-env { ($k): $v }
        }
    }

    let path_list = $data | get --optional paths | default []
    let path_string = $data | get --optional path | default ''

    if ($path_list | is-not-empty) {
        $env.PATH = $path_list
    }

    if ($path_string | is-not-empty) {
        $env.PATH = $path_string
    }
}

export-env {
    $env.__ORIG_PATH = $env.PATH

    $env.config = ($env.config | upsert hooks.env_change.PWD { |config|
        let list = ($config | get --optional hooks.env_change.PWD) | default []

        $list | append { |before, after|
            _proto_activate_hook
        }
    })
}

_proto_activate_hook
