crates/cli/tests/snapshots/activate_test__activate__passes_args_through-13.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

export __ORIG_PATH="$PATH"

_proto_activate_hook() {
  local output
  trap '' SIGINT
  output=$(proto activate zsh --config-mode upwards-global --no-bin --no-shim --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT
}

typeset -ag chpwd_functions
if (( ! ${chpwd_functions[(I)_proto_activate_hook]} )); then
  chpwd_functions=(_proto_activate_hook $chpwd_functions)
fi

_proto_activate_hook
